@@ -1,6 +1,13 @@
 @rem set JRE_HOME=C:\Program Files\Java\jre1.8.0_92
+@rem set _JAVA_MEMORY=-Xms512m -Xmx2g
 
 @setlocal
+@if exist "setenv.cmd" (
+@echo ### Loading environment from setenv.cmd ...
+@echo.
+@call setenv.cmd
+@echo.
+)
 @set errorcode=0
 @set delay=20
 @echo ### Checking Java environment ...
@@ -13,8 +20,13 @@
 @if errorlevel 1 (
   @echo       Probably, you have not installed Java...
 ) else (
-  @for /f "tokens=*" %%i in ('@where java.exe') do @call :startJAVA "%%i" & echo. & if not errorlevel 1 goto :end
+  @for /f "tokens=*" %%i in ('@where java.exe') do @call :startJava "%%i" & echo. & if not errorlevel 1 goto :end
 )
+
+@rem Try to all known locations of java
+@call :findJava "%ProgramW6432%\Java" & if not errorlevel 1 goto :end
+@call :findJava "%ProgramFiles%\Java" & if not errorlevel 1 goto :end
+@call :findJava "%ProgramFiles(x86)%\Java" & if not errorlevel 1 goto :end
 
 @set errorcode=1
 @echo       Check JRE_HOME and JAVA_HOME environment variables.
@@ -44,9 +56,21 @@
 goto :end
 
 rem SUBROUTINES
+@rem errorlevel=0 JRE has been found and executed successfully
+@rem errorlevel=1 JRE_HOME is not valid
+@rem errorlevel=2 java.exe has not been found
+@rem errorlevel=3 java.exe is not suitable
+@rem errorlevel=4 Not suitable Java version
+
+:findJava
+@if not exist "%~1" exit /b 2
+@for /f "tokens=*" %%i in ('dir "%~1" /O-D /AD /B') do @call :startJava "%~1\%%~i\bin\java.exe" & echo. & if not errorlevel 1 exit /b 0
+@exit /b 2
+
 
 :startJava
 @setlocal
+@if not exist "%~1" exit /b 2 & endlocal
 @set _ARG=%~1
 @echo ### Found executable java.exe is located at:
 @echo        %_ARG%
@@ -56,7 +80,7 @@ rem SUBROUTINES
 
 @rem Try to resolve JRE_HOME from the symlink on the found executable java.
 @for /f "tokens=2 delims=[]" %%i in ('@dir "%_ARG%" ^| findstr /l \bin\java.exe') do @set _VAR=%%i
-@if "%_VAR%" == "" exit /b 4 & endlocal
+@if "%_VAR%" == "" exit /b 3 & endlocal
 @echo ### Resolving symlink...
 @call :startJRE "%_VAR%" & if not errorlevel 1 exit /b 0 & endlocal
 @exit /b 3 & endlocal
@@ -65,18 +89,67 @@ rem SUBROUTINES
 @setlocal
 @set _ARG=%~1
 @echo ### Composing JRE_HOME from %_ARG% ...
-@if "%_ARG:~-13%" neq "\bin\java.exe" @echo ###    ... it does not match & exit /b 2 & endlocal
+@if "%_ARG:~-13%" neq "\bin\java.exe" @echo ###    ... it does not match & exit /b 3 & endlocal
 @set JRE_HOME=%_ARG:~0,-13%
 @echo ### Trying to use JRE_HOME=%JRE_HOME% ...
 
 :start
+@rem check JAVA installation and save valid JRE_HOME
 @setlocal & pushd %~dp0 & call bin\setclasspath.bat > NUL & popd & endlocal & if errorlevel 1 exit /b 1 & endlocal
+@setlocal & pushd %~dp0 & call bin\setclasspath.bat & popd
+@endlocal & set _JRE_HOME=%JRE_HOME%
+
+@rem Determine Java version
+@pushd "%_JRE_HOME%"
+@FOR /f "tokens=3" %%G IN ('bin\java.exe -version 2^>^&1 ^| find "java version"') DO set _JAVA_VERSION=%%~G
+@popd
+@if "%_JAVA_VERSION%" == "" set _JAVA_VERSION=UNKNOWN
+@if "%_JAVA_VERSION:~0,3%" == "1.6" echo Java version %_JAVA_VERSION% is not supported. & exit /b 4 & endlocal
+
+@if not defined _JAVA_OPTS (
+@rem set parameters for Java 9
+@if "%_JAVA_VERSION%" == "9" set _JAVA_OPTS=--add-modules java.se.ee
+@if "%_JAVA_VERSION:~0,2%" == "9." set _JAVA_OPTS=--add-modules java.se.ee
+
+@rem set parameters for Java 8
+@if "%_JAVA_VERSION:~0,3%" == "1.8" set _JAVA_OPTS=-XX:+UseParNewGC -XX:+UseConcMarkSweepGC
+
+@rem set parameters for Java 7
+@if "%_JAVA_VERSION:~0,3%" == "1.7" set _JAVA_OPTS=-XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:PermSize=128m -XX:MaxPermSize=512m
+)
+
+@rem Determine memory size
+@for /f %%G in ('wmic ComputerSystem get TotalPhysicalMemory ^| findstr [0123456789]') do set _MEMORY=%%G
+@if "%_MEMORY%" == "" set _MEMORY=0
+set _MEMORY=%_MEMORY:~0,-9%
+
+%if not defined _JAVA_MEMORY (
+@rem default memory settings
+@set _JAVA_MEMORY=-Xms512m -Xmx2g
+
+@rem 4GiB
+@if %_MEMORY% GEQ 4 set _JAVA_MEMORY=-Xms2g -Xmx3g
+
+@rem 6GiB
+@if %_MEMORY% GEQ 6 set _JAVA_MEMORY=-Xms3g -Xmx5g
+
+@rem 8GiB
+@if %_MEMORY% GEQ 8 set _JAVA_MEMORY=-Xms4g -Xmx7g
+
+@rem 12GiB
+@if %_MEMORY% GEQ 12 set _JAVA_MEMORY=-Xms8g -Xmx10g
+)
+
+@rem Run Apache Tomcat
 @setlocal
 @echo.
 @echo ### Starting OpenL Tablets DEMO ...
 @echo.
-@set JAVA_OPTS=%JAVA_OPTS% -Xms512m -Xmx2g -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:PermSize=128m -XX:MaxPermSize=512m
+@set JAVA_OPTS=%JAVA_OPTS% %_JAVA_MEMORY% %_JAVA_OPTS%
 @set CATALINA_OPTS=-DDEMO=DEMO -Dwebstudio.home=openl-demo -Dwebstudio.configured=true -Dws.port=8080 %CATALINA_OPTS%
+@echo Memory size:           "%_MEMORY%GBytes"
+@echo Java version:          "%_JAVA_VERSION%"
+@echo Using JRE_HOME:        "%_JRE_HOME%"
 @echo Using JAVA_OPTS:       "%JAVA_OPTS%"
 @echo Using CATALINA_OPTS:   "%CATALINA_OPTS%"
 @pushd %~dp0
